package com.cupk.common;

/**
 * 当前请求用户上下文（ThreadLocal）
 */
public class UserContext {

    private static final ThreadLocal<Integer> userIdHolder = new ThreadLocal<>();
    private static final ThreadLocal<String> usernameHolder = new ThreadLocal<>();
    private static final ThreadLocal<String> roleHolder = new ThreadLocal<>();

    public static void set(Integer userId, String username, String role) {
        userIdHolder.set(userId);
        usernameHolder.set(username);
        roleHolder.set(role);
    }

    public static Integer getUserId() { return userIdHolder.get(); }

    public static String getUsername() { return usernameHolder.get(); }

    public static String getRole() { return roleHolder.get(); }

    public static void clear() {
        userIdHolder.remove();
        usernameHolder.remove();
        roleHolder.remove();
    }
}
