package com.cupk.config;

import org.springframework.context.annotation.Configuration;

/**
 * MyBatis Plus 配置
 * 注意：3.5.16 版本分页功能已内置自动配置，无需手动注册 PaginationInnerInterceptor
 */
@Configuration
public class MybatisPlusConfig {

}
